--- a/Sample-WPF/UploadImage.xaml
+++ b/Sample-WPF/UploadImage.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Margin="5, 5, 0, 0" FontWeight="Bold">Upload an Image</TextBlock>
@@ -31,9 +31,9 @@
                 <Button Click="SubmitUriButton_Click" Margin="5, 5, 0, 0">Analyze</Button>
             </StackPanel>
         </StackPanel>
-        <Image Grid.Row="3" HorizontalAlignment="Left" Margin="5, 5, 0, 0" x:Name="_imagePreview"></Image>
+        <Image Grid.Row="3" HorizontalAlignment="Left" Margin="5, 5, 0, 0" x:Name="_imagePreview" Width="95" Height="95" Stretch="Fill"></Image>
         <TextBlock x:Name="_status" Grid.Row="2" Margin="5" FontWeight="Bold"></TextBlock>
-        <Grid Grid.Row="4" Margin="5, 5, 5, 0">
+        <Grid Grid.Row="4" Margin="5, 5, 5, 0" Visibility="Hidden" x:Name="_tagsGrid" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"></ColumnDefinition>
                 <ColumnDefinition Width="110"></ColumnDefinition>
@@ -44,7 +44,7 @@
                 <RowDefinition Height="auto"></RowDefinition>
                 <RowDefinition Height="auto"></RowDefinition>
             </Grid.RowDefinitions>
-            <Label Content="Suggested Tags" Grid.Row="0" Grid.Column="0"/>
+            <Label Content=" AISuggested Tags" FontSize="16" FontWeight="Bold" Grid.Row="0" Grid.Column="0"/>
             <Label Content="User Defined Tags" Grid.Row="0" Grid.Column="1"/>
             <StackPanel x:Name="_imageTags" Grid.Row="1" Grid.Column="0"/>
             <TextBox Name="text1" Grid.Row="0" Grid.Column="2" Width="100"/>
