--- a/Sample-WPF/MainWindow.xaml
+++ b/Sample-WPF/MainWindow.xaml
@@ -6,8 +6,7 @@
         xmlns:local="clr-namespace:VisionAPI_WPF_Samples"
         xmlns:sampleUtil="clr-namespace:SampleUserControlLibrary;assembly=SampleUserControlLibrary"
         mc:Ignorable="d"
-        Title="Microsoft Project Oxford" Height="800" Width="1000"
-        Icon="Assets\Microsoft-logo_rgb_c-gray.png">
+        Title="Relevant Image Finder" Height="800" Width="1000">
     <Grid>
         <sampleUtil:SampleScenarios x:Name="_scenariosControl"/>
     </Grid>
