--- a/Sample-WPF/UploadImage.xaml
+++ b/Sample-WPF/UploadImage.xaml
@@ -16,7 +16,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Margin="5, 5, 0, 0" FontWeight="Bold">Upload an Image</TextBlock>
+        <TextBlock Grid.Row="0" Margin="5, 5, 0, 0" FontWeight="Bold">Analyze Image</TextBlock>
         <StackPanel Orientation="Vertical" Grid.Row="1" >
             <TextBlock Margin="5, 5, 0, 0">Please paste in an image URL and click [Analyze]</TextBlock>
             <ComboBox x:Name="_language" Margin="5, 5, 0, 5" Width="80" HorizontalAlignment="Left" HorizontalContentAlignment="Left" SelectedIndex="0">
@@ -32,7 +32,7 @@
                 <Button Click="SubmitTagsButton_Click" Margin="5, 5, 0, 0" Grid.Row="0" Grid.Column="3">Submit Image</Button>
             </StackPanel>
         </StackPanel>
-        <Image Grid.Row="3" HorizontalAlignment="Left" Margin="5, 5, 0, 0" x:Name="_imagePreview" Width="95" Height="95" Stretch="Fill"></Image>
+        <Image Grid.Row="3" HorizontalAlignment="Left" Margin="5, 5, 0, 0" x:Name="_imagePreview" Width="300" Height="300" Stretch="Fill"></Image>
         <TextBlock x:Name="_status" Grid.Row="2" Margin="5" FontWeight="Bold"></TextBlock>
         <Grid Grid.Row="4" Margin="5, 5, 5, 0" Visibility="Hidden" x:Name="_tagsGrid" >
             <Grid.ColumnDefinitions>
